# OpenClaw-dashboard

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  security.py
backend/app/businesses/: __init__.py  base.py  cohesionsupps.py  jobcarver.py
backend/app/data/: skills.json
backend/app/routers/: assistant.py  auth.py  businesses.py  calendar.py  chat.py  dashboard.py  profiles.py  skills.py  vault.py
backend/app/storage/: __init__.py  base.py  local.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_jobcarver.py  test_profiles.py  test_vault.py
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  format.test.ts  format.ts  types.ts
frontend/src/lib/components/: ChartCard.svelte  DataTable.svelte  EmptyState.svelte  ErrorState.svelte  Icon.svelte  LoadingSkeleton.svelte  MobileNav.svelte  Modal.svelte  QuickActions.svelte  Sidebar.svelte  StatCard.svelte  Toaster.svelte  Topbar.svelte
frontend/src/lib/stores/: auth.ts  profile.ts  toast.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/assistant/: +page.svelte
frontend/src/routes/calendar/: +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/profiles/: +page.svelte
frontend/src/routes/select-profile/: +page.svelte
frontend/src/routes/skills/: +page.svelte
frontend/src/routes/vault/: +page.svelte
(+1 files in other folders)
